--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,10 @@ main {
     background-color: rgb(207, 2, 2);
 }
 
+.btn-success {
+    background-color: green;
+}
+
 .GoodVisText {
     font-size: 1.5rem;
 }
