--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,12 @@ body {
     border-radius: 0.5rem;
 }
 
+.toast {
+    background-color: darkblue;
+    height: 7.5rem;
+    font-size: 2rem;
+}
+
 .goodPadding {
     padding: 1rem;
 }
